kubernetes/apps/admin/envoy-gateway/envoy.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
  namespace: admin
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: admin

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy
  namespace: admin
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      kube-vip.io/loadbalancerIPs: 192.168.0.222
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "${domain/./-}-tls"
    - name: http-ext
      protocol: HTTP
      port: 9080
      allowedRoutes:
        namespaces:
          from: All
    - name: https-ext
      protocol: HTTPS
      port: 9443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "${domain/./-}-tls"

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-redirect
  namespace: admin
spec:
  parentRefs:
    - name: envoy
      namespace: admin
      sectionName: http
    - name: envoy
      namespace: admin
      sectionName: http-ext
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
